Android launcher icon
Add caching for extra screens
Fix layout of team names
